syntax = "proto2";

package cubeconductor.api;

enum Gender {
  UNKNOWN = 0;
  m = 1;
  f = 2;
  o = 3;
}

message Person {
  optional int32 registrant_id = 1;
  optional string name = 2;
  optional int32 wca_user_id = 3;
  optional string wca_id = 4;
  optional string country_iso2 = 5;
  optional Gender gender = 6;
  // Birthdate omitted
  // Email omitted
  // TODO: avatar
  repeated string roles = 8;
  // TODO: registration
  // TODO: assignments
  // TODO: personalBests
} 
